Listing code updated

--- a/i-Pulse/src/main/java/nsf/ecap/config/config.properties
+++ b/i-Pulse/src/main/java/nsf/ecap/config/config.properties
@@ -1,4 +1,4 @@
-
+satya=test
 #Environment=Test,Staging
 
 Environment=Staging
@@ -47,7 +47,14 @@ TraQtionCostcoPassword=test123
 #browserType=IE
 #browserType=firefox
 
+#ShowinglogMessagesinPopupFrameFlag=true
+ShowinglogMessagesinPopupFrameFlag=false
 
+
+iPulse_SecureLogin_Flag=true
+# -----Test Site URL-------------------
+testSiteName=https://testapps.nsf.org/trunkecap
+New_NSFOnline_SiteName=https://mystg.nsf.org/nsfonline/#/signin
 
 
 #ChromeDriverPath=C\:\\Softwares\\selenium_drivers\\chrome\\chromedriver_win32--83\\chromedriver.exe
