--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,33 +4,32 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+- main
 
 strategy:
   matrix:
-    linux:
+    jdk10_linux:
       imageName: "ubuntu-latest"
-      jdkVersion: "1.8"
-    windows:
+      jdkVersion: "1.10"
+    jdk11_windows:
       imageName: "windows-latest"
-      jdkVersion: "1.8"
+      jdkVersion: "1.11"
   maxParallel: 2
 
 pool:
   vmImage: $(imageName)
 
-
 steps:
-- task: Maven@3
+- task: Maven@4
   inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
+    mavenPomFile: "pom.xml"
+    mavenOptions: "-Xmx3072m"
     javaHomeOption: "JDKVersion"
     jdkVersionOption: $(jdkVersion)
-    jdkArchitectureOption: 'x64'
+    jdkArchitectureOption: "x64"
     publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    testResultsFiles: "**/TEST-*.xml"
+    goals: "package"
 
 
 - task: PublishCodeCoverageResults@1
